2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
	  include/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  include/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  include/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Added
	table 'ttimezone' and data.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_config.php: Added check for update manager in 
	the config process.
	
2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_license_info.php: Delete innecesary extension.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/include/styles/pandora.css: Modified 
	styles in skin like in the main css style file.
	
2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/setup/setup.php: Changed timezone by default.

2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php: Changes in tab os.

2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/setup/setup.php
	  index.php
	  pandora_db.sql
	  pandoradb_data.sql: Changed timezone setup. 

2012-04-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php, extensions/update_manager.php,
	extensions/update_manager/lib/functions.php: fixed the first
	intallation of update manager.
	
	Merged from the branch "pandora_4.0".

2012-04-18  Sancho Lerena <slerena@artica.es>

        * operation/servers/recon_view.php: Fix	column header.

        * godmode/agentes/module_manager_editor_plugin.php: Now	plugin description
        is shown formatted (\n -> <br>). Some fields have better layout.

        * godmode/servers/plugin.php: Ajax load	of description is now formatted.

        * godmode/servers/manage_recontask.php:	Fix link to show recon server.

        * godmode/servers/manage_recontask_form.php: Wider textarea.

        * pandoradb_data.sql: New defaults (4 plugins, 2 recon scripts).
